assets/main.scss
---
---

@import "{{ site.theme }}";

.default-wrapper {
	max-width: 800px;
}


.site-header {
	border-top: none;
}

.social-media-list li {
	display: inline-block;
}

.page-footer-copyright {
	color: #555;
}

.sidebar {
	width: 250px;
	position: sticky;
	top: 1rem;
	display: none;
}

@media (min-width: 800px) {
	.sidebar {
		display: block;
	}
}

.home-content {
	max-width: -webkit-calc(#{$content-width} + 500px - (#{$spacing-unit} * 2));
	max-width:         calc(#{$content-width} + 500px - (#{$spacing-unit} * 2));
	margin-right: auto;
	margin-left: auto;
	display: flex;
	padding: 1rem;
}

.clearfix {
	clear: both;
	color: #555;
}

.avitar img {
	max-width: 160px;
	border: solid #eee 0.2rem;
	border-radius: 50%;
	margin-bottom: 1.5rem;
}

.social-icons {
	margin-left: 0;
}

.social-icons li {
	list-style: none;
}

.social-icons li a {
	color: inherit;
}

.social-icons .fa-linkedin-square {
	color: #007bb6;
}

.social-icons .fa-twitter {
	color: #007bb6;
}

.social-icons .fa-stack-overflow {
	color: #fe7a15;
}

.project-links {
	margin-left: 0;
}

.project-links li {
	list-style: none;
}

